git log reset to mobile overflow fix

--- a/src/sass/_bottomSection.scss
+++ b/src/sass/_bottomSection.scss
@@ -32,7 +32,6 @@
 			font-family: 'Poppins', sans-serif;
 			letter-spacing: 1px;
 			margin-bottom: 0.4em;
-			margin-top: -2em;
 			color: $color-heading;
 
 			@media screen and (max-width: 500px) {
